Main chart overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@ a:hover{
 .main{
     flex: 0.8;
     width: 100%;
+    overflow-x: auto;
 }
 #heading {
     font-weight: 300;
